REACT hooks utilized, Box file renamed

--- a/frontend/src/components/DatabaseTester.css
+++ b/frontend/src/components/DatabaseTester.css
@@ -1,7 +1,8 @@
-.Box {
+.DatabaseTester {
     text-align: center;
     border-radius: 10%;
-    box-shadow: 0px 0px;
+    box-shadow: px 0px;
     width: 5rem;
     height: 5rem;
+    background-color: yellowgreen;
 }
